@@ -7,10 +7,10 @@ extension = xcache.so
 
 [xcache.admin]
 xcache.admin.enable_auth = On
+
+; use http://xcache.lighttpd.net/demo/cacher/mkpassword.php to generate your encrypted password
 xcache.admin.user = "mOo"
-; set xcache.admin.pass = md5($your_password)
-; login use $your_password
-xcache.admin.pass = ""
+xcache.admin.pass = "md5 encrypted password"
 
 [xcache]
 ; ini only settings, all the values here is default unless explained
